# trust-net

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE.md  README.md  WHITEPAPER.md
crates/api/: Cargo.toml
crates/api/src/: db.rs  lib.rs  main.rs  server.rs  smm_cache.rs
crates/api/tests/: server_smoke.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: mod.rs  rate.rs  root.rs  verify.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  error.rs  hashing.rs  lib.rs  quantizer.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/indexer/: ARCHITECTURE.md  Cargo.toml  README.md  indexer.toml.example
crates/indexer/migrations/: 20250127000001_initial_schema.sql  20260131000002_v0_4_schema.sql  20260131000003_private_log_payload.sql  20260201000004_deployment_mode.sql  20260201000005_edges_raw_chain_event_unique.sql  20260203000006_v0_6_schema.sql  20260204000001_feedback_verified_unique.sql  20260217000001_epoch_manifest_uri.sql  20260222000001_feedback_revocations.sql
crates/indexer/src/: config.rs  lib.rs  main.rs  ordering.rs  publisher.rs  root_manifest.rs  server_root.rs  smm_service.rs  verification.rs
crates/indexer/src/listener/: events.rs  mod.rs  provider.rs  sync.rs
crates/indexer/src/storage/: edge.rs  epoch.rs  feedback.rs  mod.rs  sync.rs  types.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs
crates/sdk-rs/: Cargo.toml
crates/sdk-rs/src/: lib.rs
crates/smm/: Cargo.toml
crates/smm/src/: builder.rs  error.rs  lib.rs  node.rs  proof.rs  tree.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs  main.rs
crates/verifier/tests/: receipt.rs  vectors.rs
docs/: Base_Sepolia_Dress_Rehearsal.md  Chain_Smoke_Test.md  Server_Smoke_Test.md  TRUSTNET_v1.1.md  Test_Vectors_v0.4.json  Test_Vectors_v0.7.json  Test_Vectors_v1.1.json  TrustNet_Spec_v0.4.md  TrustNet_Spec_v0.6.md  TrustNet_Spec_v0.7.md  TrustNet_v0.7_Implementation_Tracker.md  Upgrade_Plan.md  Upgrade_Plan_v0.6.md  Upgrade_Progress_v0.6.md
plugin-openclaw/: README.md  config.example.json5  eslint.config.js  index.js  openclaw.plugin.json  package-lock.json  package.json  plugin_stub.ts  tool_map.example.json  tsconfig.json
plugin-openclaw/src/: agent-cards.js  ask-actions.ts  decision-engine.js  internal.js  internal.ts  local-receipt.ts  store.js  store.ts  trust-circles.js  trust-workflows.js
plugin-openclaw/test/: agent-card-actions.test.js  agent-cards.test.ts  ask-actions.test.js  ask-actions.test.ts  decision-engine.test.js  integration.test.js  integration.test.ts  local-receipt.test.ts  store.test.js  trust-circles.test.js  trust-workflow-actions.test.js  trust-workflows.test.js
plugin-openclaw/testing/: helpers.js
scripts/: base_sepolia_public_rehearsal.sh  base_sepolia_release.env.example  chain_smoke_anvil.sh
scripts/lib/: base_sepolia_public_lib.sh  rehearsal_common.sh
solidity/: .gitignore  README.md  RootRegistry.sol  TrustGraph.sol  TrustNetContexts.sol  TrustNetPaymentsGuardModule.sol  TrustPathVerifier.sol  foundry.toml
solidity/test/: RootRegistry.t.sol  TrustGraph.t.sol  TrustNetContexts.t.sol  TrustNetPaymentsGuardModule.t.sol  TrustPathVerifier.t.sol
solidity/test/helpers/: TestHelpers.sol
solidity/test/mocks/: Erc8004TestHarness.sol
