[workspace]
members = [
    "crates/core",
    "crates/smm",
    "crates/indexer",
    "crates/api",
    "crates/engine",
    "crates/verifier",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trust-net/trust-net"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
