[package]
name = "trustnet-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Axum-based API server for TrustNet (endpoints: /v1/root, /v1/score, /v1/context)"

[dependencies]
# Core
trustnet-core = { path = "../core" }
trustnet-smm = { path = "../smm" }

# Web framework
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
anyhow = "1.0"
hex = "0.4"

[dev-dependencies]
tower = "0.5"
hyper = "1.0"
http-body-util = "0.1"
