[package]
name = "trustnet-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Axum-based API server for TrustNet (endpoints: /v1/root, /v1/score, /v1/context)"

[dependencies]
# Core
trustnet-core = { path = "../core" }
trustnet-smm = { path = "../smm" }
trustnet-engine = { path = "../engine" }

# Web framework
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde_jcs = "0.1"

# Signature verification (server mode ratings)
alloy-primitives = { version = "0.8", features = ["k256"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1"
sha2 = "0.10"

# Utils
anyhow = "1.0"
hex = "0.4"

[dev-dependencies]
tower = "0.5"
hyper = "1.0"
http-body-util = "0.1"
tempfile = "3.14"
k256 = { version = "0.13", features = ["ecdsa"] }
signature = "2.2"
trustnet-verifier = { path = "../verifier" }
