[package]
name = "trustnet-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tools for TrustNet - build-root, prove, verify, seed commands"

[[bin]]
name = "trustnet"
path = "src/main.rs"

[dependencies]
trustnet-core = { path = "../core" }
trustnet-smm = { path = "../smm" }
trustnet-prover = { path = "../prover" }
