[package]
name = "trustnet-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unified TrustNet operator CLI (root, rate, verify, receipt)"

[[bin]]
name = "trustnet"
path = "src/main.rs"

[dependencies]
trustnet-core = { path = "../core" }
trustnet-smm = { path = "../smm" }
trustnet-indexer = { path = "../indexer" }
trustnet-verifier = { path = "../verifier" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

alloy = { version = "0.8", features = [
    "provider-http",
    "contract",
    "sol-types",
    "signers",
    "signer-local",
] }
alloy-primitives = { version = "0.8", features = ["k256"] }
k256 = { version = "0.13", features = ["ecdsa"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
