[package]
name = "trustnet-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ERC-8004 and EdgeRated event ingestion to edges store for TrustNet"

[[bin]]
name = "trustnet-indexer"
path = "src/main.rs"

[dependencies]
# Internal dependencies
trustnet-core = { path = "../core" }
trustnet-smm = { path = "../smm" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Ethereum
alloy = { version = "0.8", features = [
    "provider-http",
    "provider-ws",
    "rpc-types",
    "rpc-types-eth",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Hex encoding (for displaying hashes)
hex = "0.4"

[dev-dependencies]
tempfile = "3.14"
