[package]
name = "trustnet-prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proof assembly (Decider→Target, Endorser→Target, Decider→Endorser→Target) from snapshot for TrustNet"

[dependencies]
trustnet-core = { path = "../core" }
trustnet-smm = { path = "../smm" }
