[package]
name = "trustnet-smm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sparse Merkle Map builder and verifier for TrustNet"

[dependencies]
# Core types and hashing
trustnet-core = { path = "../core" }
alloy-primitives = { version = "0.8", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

[dev-dependencies]
# Testing
proptest = "1.5"
criterion = "0.5"
