[package]
name = "trustnet-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Offline verifier and gateway utilities for TrustNet (Spec v0.6)"

[[bin]]
name = "trustnet-verify"
path = "src/main.rs"

[[bin]]
name = "trustnet-rate"
path = "src/bin/trustnet-rate.rs"

[dependencies]
trustnet-core = { path = "../core" }
trustnet-smm = { path = "../smm" }
trustnet-engine = { path = "../engine" }

anyhow = "1.0"
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde_jcs = "0.1"

clap = { version = "4.5", features = ["derive"] }

hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

alloy-primitives = { version = "0.8", features = ["k256"] }
k256 = { version = "0.13", features = ["ecdsa"] }
signature = "2.2"
